--- a/esas_exploratory.Rmd
+++ b/esas_exploratory.Rmd
@@ -580,39 +580,128 @@ Sep 30 - Oct 12 2020	|	16| 9 - 10
 |Oct 28 - Nov 9 2020	| 18| 10 - 11
 
 FIGURE OUT YEAR -- IT MIGHT HAVE DUPLICATES BC OF MONTH
-```{r}
+
+
+```{r sort_dates_func, eval = FALSE}
 sort_dates <- function(date){
+  year = year(date)
   month = month(date)
   day = day(date)
   
-  if ((month > 3) & (month < 8)) {NA} else {
-    if (month == 8) {13} else {
-      #sept: 2-14 is 14, 16-28 is 15, 30 is 16
+  if (year == 2020) {
+    #now follows EVERYTHING for 2020
+    
+    if (month == 8) {
+    #aug 19-31 is 13, everything else in aug is NA
+      if ((day >= 19) & (day <= 31)) {time_period = 13} else {time_period = NA}
+    } else { #NOT august
+      
       if (month == 9) {
-        if ((day >= 2) & (day <= 14)) {14} else {
-          if ((day >= 16) & (day <= 28)) {15} else {
-            if (day == 30) {16} else {
-              NA
-            }
+      #september 2-14 is 14, 16-28 is 15, 30 is 16, else in sept is NA
+        if ((day >= 2) & (day <= 14)) {time_period = 14} else {
+          if ((day >= 16) & (day <= 28)) {time_period = 15} else {
+            if (day == 30) {time_period = 16} else {time_period = NA}
           }
         }
-      } else {
-        #oct: 1-12 is 16, 14-26 is 17, 28 - 31 is 18
-      }
-    }
-  }
+      } else { #not september
+        
+        if (month == 10) {
+        #october 1-12 is 16, 14-26 is 17, 28-31 is 18, else NA
+          if ((day >= 1) & (day <= 12)) {time_period = 16} else {
+            if ((day >= 14) & (day <= 26)) {time_period = 17} else {
+              if ((day >= 28) & (day <= 31)) {time_period = 18} else {time_period = NA}
+            }
+          }
+        } else { #not october
+          
+          if (month == 11) {
+          #november 1-9 is 18, 11-23 is 19, 25-30 is 20, else NA
+            if ((day >= 1) & (day <= 9)) {time_period = 18} else {
+              if ((day >= 11) & (day <= 23)) {time_period = 19} else {
+                if ((day >= 25) & (day <= 30)) {time_period = 20} else {time_period = NA}
+              }
+            }
+          } else { #not november 
+            
+            if (month == 12) {
+              #december 1-7 is 20, 9-21 is 21, 22-31 is 1, else NA
+              if ((day >=1) & (day <= 7)) {time_period = 20} else {
+                if ((day >= 9) & (day <= 21)) {time_period = 21} else {
+                  if ((day >= 22) & (day <= 31)) {time_period = 1} else {time_period = NA}
+                }
+              }
+              
+            } else {time_period = NA} #if it's not any of these months, it's NA
+          } #end not-november
+        } #end not-october
+      } #end not-september
+    } #end not-august
+  } #end 2020
 
+
+  if (year == 2021) {
+    #now follows EVERYTHING for 2021
+    
+    if (month == 1) {
+    #january 1-5 is 1, 6-18 is 22, 20-31 is 23, else NA
+      if ((day >= 1) & (day <= 5)) {time_period = 1} else {
+        if ((day >= 6) & (day <= 22)) {time_period = 22} else {
+          if ((day >= 20) & (day <= 31)) {time_period = 23} else {time_period = NA}
+        }
+      }
+    } else { #NOT january
+      
+      if (month == 2) {
+      #february 1 is 23, 3-15 is 24, 17-28 is 25, else NA 
+        if (day == 1) {time_period = 23} else {
+          if ((day >= 3) & (day <= 15)) {time_period = 24} else {
+            if ((day >= 17) & (day <= 28)) {time_period = 25} else {time_period = NA}
+          }
+        }
+      } else { #not february
+         
+        if (month == 3) {
+        #march 1 is 25, 3-15 is 26, 17-29 is 27, else NA
+          if (day == 1) {time_period = 25} else {
+            if ((day >= 3) & (day <= 15)) {time_period = 26} else {
+              if ((day >= 17) & (day <= 29)) {time_period = 27} else {time_period = NA}
+            }
+          }
+        } else {time_period = NA} #if not march, NA
+      } #end not february
+    } #end not-january
+  } #end 2021 
+
+  time_period
   
-}
+} #end the function definition
 ```
 
+
 ```{r}
-sort_dates("2020-8-22")
+#if i just do the mutate, then sort_dates() doesn't work because it takes only one argument and returns one. BUT if I group by date (which works in this case because there's only one row per each unique date) then the function works!!
+
+covid_dated <- us_covid %>%  % %
+  group_by(date) %>% 
+  mutate(period = sort_dates(date))
 ```
 References:
 
  - if else statements: https://www.datamentor.io/r-programming/if-else-statement/
  - & operator https://www.r-bloggers.com/2010/12/logical-operators-in-r/
+
+
+### Joining NYT covid and tidied_data
+
+```{r}
+covid_new <- covid_dated %>% na.omit()
+tidied_new <- tidied_data %>% mutate(period = `Time Period`) %>% 
+  select(-Phase, -`Time Period Start Date`, -`Time Period End Date`, -`Time Period`, -`Quartile Range`, -`Suppression Flag`)
+new_data <- tidied_new %>% 
+  left_join(covid_new, by = "period")
+```
+
+
 
 # Fun time: confidence intervals and color palette??
 
@@ -627,3 +716,7 @@ tidied_data %>%
 ```
 
 Okay, there really seems to be some variation in confidence intervals!! That indicates that it might be worth trying to use those value-suppressing uncertainty palettes!!
+
+
+
+# Working with new_data
